<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_primary">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="440dp"
        android:orientation="vertical"
        app:circularflow_radiusInDP="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Main_title"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/twelve_title"
            android:text="@string/Twelve_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eleven_title"
            android:text="@string/Eleven_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ten_title"
            android:text="@string/Ten_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nine_title"
            android:text="@string/Nine_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>