<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="@drawable/blackbg_cornerwhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topdatalayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">


        <ImageView
            android:id="@+id/deletebtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="0dp"
            android:clickable="true"
            android:contentDescription="Delete btn"
            android:src="@drawable/delete_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/datetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/sharebtn"
            android:layout_width="24dp"
            android:layout_height="28dp"
            android:layout_marginEnd="0dp"
            android:clickable="true"
            android:contentDescription="Sahre btn"
            android:src="@drawable/share_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Compass_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/blackbg_cornerwhite"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/data_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topdatalayout">


        <com.github.anastr.speedviewlib.SpeedView
            android:id="@+id/speedView"
            android:layout_width="200dp"
            android:layout_height="350dp"
            android:layout_margin="12dp">

        </com.github.anastr.speedviewlib.SpeedView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/acceleration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="Text Here"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toTopOf="@+id/speedView"
                tools:ignore="TextSizeCheck"></TextView>

            <TextView
                android:id="@+id/unitvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="m/s2"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toTopOf="@+id/speedView"
                tools:ignore="TextSizeCheck"></TextView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/peak"
                android:textColor="@color/white"></TextView>

            <TextView
                android:id="@+id/peakvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_values"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/Time"
                android:textColor="@color/white"></TextView>

            <TextView
                android:id="@+id/timeCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_value"
                android:textColor="@color/white"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/Avg"
                android:textColor="@color/white"></TextView>

            <TextView
                android:id="@+id/AVGvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_values"
                android:textColor="@color/white"></TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>