<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black_primary"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/list_item"
        android:background="@drawable/curved_background">

        <LinearLayout
            android:id="@+id/date_Time_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="12dp">

            <TextView
                android:id="@+id/datevalue"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="12dp"></TextView>

            <TextView
                android:id="@id/timevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginEnd="12dp"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/more"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/baseline_more_vert_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/date_Time_box"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@drawable/bluebackground"
                    android:gravity="center"
                    android:padding="4sp"
                    android:text="@string/peak"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck"></TextView>

                <TextView
                    android:id="@+id/peakvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="14sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:background="@drawable/bluebackground"
                    android:gravity="center"
                    android:padding="4sp"
                    android:text="@string/Time"
                    android:textStyle="bold"
                    android:textColor="@color/black_primary"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:id="@+id/timestampvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textSize="14sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Avg"
                 android:textStyle="bold"
                    android:textColor="@color/black_primary"
                    android:background="@drawable/bluebackground"
                    android:padding="4sp"
                    android:gravity="center"
                    android:layout_margin="14dp"
                    android:textSize="14sp"></TextView>

                <TextView
                    android:id="@+id/avgvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/white"

                    android:textSize="14sp"></TextView>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>