<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/blue_primary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:fontFamily="sans-serif"
            android:text="@string/sub_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieanimaion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/sound"></com.airbnb.lottie.LottieAnimationView>


        <!--        <ImageView-->
        <!--            android:id="@+id/imageView3"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="230dp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:srcCompat="@drawable/img" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="12dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="HardcodedText">

    </TextView>

    <ProgressBar
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_primary"
        android:indeterminateTint="@color/blue_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/loading"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.509">

    </ProgressBar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/icon_colorgrey"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ads"
            android:padding="4dp"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:background="@color/blue_primary"
            tools:ignore="MissingConstraints">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>